--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,7 +12,6 @@ android {
     buildTypes {
         release {
             minifyEnabled true
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.txt'
         }
     }
     productFlavors {
@@ -20,5 +19,10 @@ android {
 }
 
 dependencies {
-    compile 'com.android.support:support-v4:21.0.2'
+    compile 'com.android.support:support-v4:21.0.3'
+    compile 'com.google.android.gms:play-services:6.5.87'
+    //noinspection GradlePath
+    compile files('/home/djwalshy/363Quiz/363Quiz/.idea/libraries/libGoogleAnalyticsServices.jar')
+    //noinspection GradlePath
+    compile files('/home/djwalshy/363Quiz/363Quiz/libs/libGoogleAnalyticsServices.jar')
 }
