--- a/local.properties
+++ b/local.properties
@@ -7,5 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Thu Jan 01 17:55:43 CST 2015
-sdk.dir=/home/djwalshy/Android/Sdk
+#Thu Jan 22 16:12:56 CST 2015
+sdk.dir=C\:\\Users\\Bryan\\AppData\\Local\\Android\\sdk
