--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,7 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.military.quizthirtysixthree"
     android:versionCode="7"
-    android:versionName="1.4">
+    android:versionName="1.4" >
+
     <uses-sdk
         android:minSdkVersion="14"
         android:targetSdkVersion="20"
@@ -11,21 +12,19 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-
     <uses-permission
         android:name="android.permission.WRITE_EXTERNAL_STORAGE"
         android:maxSdkVersion="18" />
-    <uses-permission
-        android:name="android.permission.READ_PHONE_STATE" />
+    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
     <uses-permission
         android:name="android.permission.READ_EXTERNAL_STORAGE"
         android:maxSdkVersion="18" />
 
     <application
-        android:supportsRtl="true"
         android:allowBackup="true"
         android:icon="@drawable/ic_campaign_hat_no_background"
         android:label="@string/app_name"
+        android:supportsRtl="true"
         android:theme="@style/AppTheme" >
         <activity
             android:name=".SplashScreen"
@@ -47,6 +46,10 @@
         <activity
             android:name=".Quiz_Choice"
             android:label="@string/title_activity_quiz__choice" >
+        </activity>
+        <activity
+            android:name=".ChoiceActivity"
+            android:label="Choose Exam" >
         </activity>
     </application>
 
